@@ -5,9 +5,11 @@ import org.apache.commons.io.FilenameUtils;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
+import java.util.Optional;
 
 public final class Downloader {
     private Downloader() {}
@@ -15,16 +17,16 @@ public final class Downloader {
     public static final String PATH_SAVE = System.getProperty("user.dir") + File.separator;
 
     //Return path to downloaded file
-    public static File downloadFile(String urlString) {
+    public static Optional<File> downloadFile(String urlString) {
         Path fileName = Path.of(PATH_SAVE + FilenameUtils.getName(urlString));
         File file = fileName.toFile();
-        URL url;
         try {
-            url = URI.create(urlString).toURL();
+            URL url = new URL(urlString);
             FileUtils.copyURLToFile(url, file);
         } catch (IOException e) {
             e.printStackTrace();
+            return Optional.empty();
         }
-        return file;
+        return Optional.of(file);
     }
 }
